@@ -1,3 +1,6 @@
+Sat Mar 28 21:30:06 HKT 2020
+	* hacking: add list_function module
+
 Mon Mar  9 09:49:05 HKT 2020
 	* analysis: output target file cmdline AND idx
 	* analysis/gcc/c.cc: do NOT use get_mem_ref_tn()
